--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ flutter:
   assets:
      - assets/images/loading.jpeg
 
+#     banner
+     - assets/images/banners/banner1.jpeg
+     - assets/images/banners/banner2.jpg
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
