--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/loading.jpeg
+     - assets/images/company.jpg
 
 #     banner
      - assets/images/banners/banner1.jpeg
      - assets/images/banners/banner2.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
